--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -5,6 +5,7 @@
 * Fix some compilation warnings that were shown on Windows
 * Small change in DLPI handling related to physaddr length
 * Updates to the SCons build system scripts related to Mac OS X
+* Redefine the TAPCFG_STATUS flags for flexibility, breaks API
 
 Version 0.9.0
 -------------
